Added: chromer driver in shared folder config .properties file in project level extent report in POM.xml Reports folder

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/xc/0vzmrlfn39n9d8jp21hlnftw0000gn/T/testng-eclipse-547831598/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/xc/0vzmrlfn39n9d8jp21hlnftw0000gn/T/testng-eclipse-304773099/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginpage')
 data.setCell(0, 2, 'LoginPage.verifyLoginPage')
-data.setCell(0, 3, 4620);
+data.setCell(0, 3, 8750);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,13 +221,25 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">LoginPage.verifyLoginPage</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">start</span>
+                <span class="method-name">InitializeParameters(null, null, null, null, null, null, null, null, null, null, null, null)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+              <div class="configuration-method before">
+                <span class="method-name">startMethod(public void LoginPage.verifyLoginPage.verifyLoginpage())</span>
+                <span class="method-start">135 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginpage</span>
-                <span class="method-start">10344 ms</span>
+                <span class="method-start">5776 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">endMethod([TestResult name=verifyLoginpage status=SUCCESS method=verifyLoginPage.verifyLoginpage()[pri:0, inst...)</span>
+                <span class="method-start">14528 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-suite after">
+                <span class="method-name">dumpParameters</span>
+                <span class="method-start">14543 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
